deployment/connection-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: connection-svc
  name: connection-svc
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
    nodePort: 50000
  selector:
    service: connection-svc
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: connection-svc
  name: connection-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      service: connection-svc
  template:
    metadata:
      labels:
        service: connection-svc
    spec:
      containers:
      - image: tomiwasalau01/connection-svc:latest
        name: connection-svc
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "64m"
          limits:
            memory: "256Mi"
            cpu: "256m"
      restartPolicy: Always
