deployment/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: frontend
  name: frontend
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
    nodePort: 30010
  selector:
    service: frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      service: frontend
  template:
    metadata:
      labels:
        service: frontend
    spec:
      containers:
      - image: udacity/nd064-udaconnect-app:latest
        name: frontend
        imagePullPolicy: Always
      restartPolicy: Always
