deployment/location-grpc-producer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: location-grpc-producer
  name: location-grpc-producer
spec:
  ports:
  - name: "5005"
    port: 5005
    targetPort: 5005
    nodePort: 30005
  selector:
    service: location-grpc-producer
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: location-grpc-producer
  name: location-grpc-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      service: location-grpc-producer
  template:
    metadata:
      labels:
        network/kafka-network: "true"
        service: location-grpc-producer
    spec:
      containers:
      - image: tomiwasalau01/location-grpc-producer:latest
        name: location-grpc-producer
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "64m"
          limits:
            memory: "256Mi"
            cpu: "256m"
      restartPolicy: Always
